Fix minor bug of overflowing

--- a/styles.css
+++ b/styles.css
@@ -174,10 +174,14 @@ body{
 
 .card{
     background-color: white;
-    border: 1px solid black;
+    box-shadow: 0px 3px 5px gray;
     border-radius: 15px;
-    padding: 15px;
+    padding: 30px 25px;
     display: grid;
+}
+
+.card .description{
+    overflow: scroll;
 }
 
 .card > .project-name{
@@ -199,7 +203,7 @@ body{
 }
 
 .anouncements{
-    border: 1px solid black;
+    box-shadow: 0px 3px 5px gray;
     border-radius: 10px;
     padding: 10px 30px;
     display: grid;
